# gpt2_plain_cpp

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  export_weights.py  run.cpp  run.h  utils.cpp  utils.h
